# clock-tui

./: .gitignore  AGENTS.md  README.md  next.config.ts  package-lock.json  package.json
.github/workflows/: release.yml  rust.yml
app/: globals.css  layout.tsx  page.tsx
app/api/widget/run/: route.ts
clock-tui/: Cargo.toml
clock-tui/examples/: config.toml
clock-tui/src/: app.rs  clock_text.rs  config.rs
clock-tui/src/app/: modes.rs
clock-tui/src/app/modes/: clock.rs  clock_widget.rs  countdown.rs  stopwatch.rs  timer.rs
clock-tui/src/clock_text/font/: bricks.rs  mod.rs
components/: BricksText.tsx  ClockApp.tsx  ClockDisplay.tsx  CountdownDisplay.tsx  StopwatchDisplay.tsx  ThemeMenu.tsx  TimerDisplay.tsx  WidgetPanel.tsx
docs/: widget-themes.md
examples/widgets/: tclock-system-health
hooks/: useCountdown.ts  useStopwatch.ts  useTimer.ts
lib/: ansi.tsx  bricks.ts  clock.ts  config.ts  countdown.ts  modes.ts  stopwatch.ts  themes.ts  timer.ts
packaging/aur/: PKGBUILD  PKGBUILD-bin
xtask/: Cargo.toml
xtask/src/: main.rs
