[package]
name = "clock-tui"
version = "0.6.2"
edition = "2021"
license = "MIT"
description = "A clock app in terminal"
homepage = "https://github.com/akitaonrails/clock-tui"
repository = "https://github.com/akitaonrails/clock-tui"
readme = "README.md"
authors = ["Race604 <race604@gmail.com>"]
exclude = [
    "packaging/*",
    ".github/*",
]

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/clock-tui-linux-{ target-arch }.tar.gz"
pkg-fmt = "tgz"
bin-dir = "{ bin }{ binary-ext }"

[dependencies]
ratatui = "0.25.0"
crossterm = "0.25"
chrono = "0.4"
chrono-tz = "0.8"
clap = { version = "4.0", features = ["derive"] }
regex = "1.7"
toml = "0.7"
serde = { version = "1.0", features = ["derive"] }
dirs = "5.0"

[lib]
name = "clock_tui"
path = "src/lib.rs"

[[bin]]
name = "tclock"
path = "src/bin/main.rs"
bench = false
