[package]
name = "clock-tui"
version = "0.6.4"
edition = "2021"
rust-version = "1.88"
license = "MIT"
description = "A clock app in terminal"
homepage = "https://github.com/akitaonrails/clock-tui"
repository = "https://github.com/akitaonrails/clock-tui"
readme = "README.md"
authors = ["Race604 <race604@gmail.com>"]
exclude = [
    "packaging/*",
    ".github/*",
]

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/clock-tui-linux-{ target-arch }.tar.gz"
pkg-fmt = "tgz"
bin-dir = "{ bin }{ binary-ext }"

[dependencies]
ratatui = "0.30.1"
crossterm = "0.29"
chrono = "0.4"
chrono-tz = "0.10"
clap = { version = "4.6", features = ["derive"] }
regex = "1"
toml = "1.1"
serde = { version = "1", features = ["derive"] }
dirs = "6"

[lib]
name = "clock_tui"
path = "src/lib.rs"

[[bin]]
name = "tclock"
path = "src/bin/main.rs"
bench = false
