[package]
name = "xtask"
version = "0.1.0"
edition = "2021"
rust-version = "1.88"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.6", features = ["derive"] }
clap_mangen = "0.3"
clap_complete = "4.6"
clock-tui = { path = "../clock-tui" }
